Fix overflow bug due to absolute position

--- a/assets/animation/animation.css
+++ b/assets/animation/animation.css
@@ -81,6 +81,7 @@
     height: auto;
     animation: cat-animation 8s infinite;
     z-index: -1; /* Ensure it is in the background */
+    overflow: hidden;
 }
 
 .no-transition .sun,
