--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,15 +46,24 @@
     text-rendering: optimizeLegibility; 
 } 
 
+html, body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden; /* Prevent horizontal scrolling */
+}
+
 body {
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    overflow: hidden;
+    height: 100%;
     font-family: 'Hedvig Letters Serif', serif;
     background-color: var(--color-bg);
+    max-width: 100vw;
+    overflow: hidden;
 }
 
 ul, ol {
@@ -97,6 +106,14 @@ header h1 {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.background {
+    position: absolute; /* Make sure it can contain absolutely positioned children */
+    width: 100%;
+    height: 100%;
+    max-width: 100vw; /* Ensure container does not exceed viewport width */
+    overflow: hidden; /* Hide any overflow from children */
 }
 
 /* Theme switch wrapper */
